--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "@models/*": ["./src/models/*"],
       "@views/*": ["./src/views/*"],
       "@config/*": ["./src/config/*"],
-      "@subtitling/*": ["./src/subtitling/*"]
+      "@subtitling/*": ["./src/subtitling/*"],
+      "@utils/*": ["./src/utils/*"]
     }
   },
   "include": [
