--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,21 @@
 {
   "compilerOptions": {
-    "target": "es2017",                          
-    "module": "commonjs",                     
-    "lib": ["es6"],                             
-    "allowJs": true,                       
-    "outDir": "./dist",                        
-    "rootDir": "./src",                       
-    "removeComments": true,                
+    "target": "es2017",
+    "module": "commonjs",
+    "declaration": true,
+    "lib": ["es6"],
+    "allowJs": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "removeComments": true,
     "typeRoots": [
       "./node_modules/@types",
       "./src/@types"
-    ],                          
-    "esModuleInterop": true,                  
+    ],
+    "esModuleInterop": true,
     "resolveJsonModule": true,
-    "experimentalDecorators": true,        
-    "emitDecoratorMetadata": true,         
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": false,
     "baseUrl": "./",
