chore: resolve paths for emitted code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "removeComments": true,
+    "noLib": false,
     "typeRoots": [
       "./node_modules/@types",
       "./src/@types"
@@ -20,12 +21,6 @@
     "forceConsistentCasingInFileNames": false,
     "baseUrl": "./",
     "paths": {
-      "@controllers/*": ["./src/controllers/*"],
-      "@services/*": ["./src/services/*"],
-      "@routes/*": ["./src/routes/*"],
-      "@models/*": ["./src/models/*"],
-      "@views/*": ["./src/views/*"],
-      "@config/*": ["./src/config/*"],
       "@subtitling/*": ["./src/subtitling/*"],
       "@utils/*": ["./src/utils/*"]
     }
