--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "description": "A subtitle parser",
   "version": "1.0.1",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "author": "Alexandre Matos <alexandremt03@gmail.com>",
   "repository": {
     "type": "git",
@@ -22,10 +21,10 @@
     "delete-build": "rimraf dist",
     "prebuild": "yarn delete-build",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
+    "postbuild": "tsc -p tsconfig.json && tscpaths -p tsconfig.json -s src",
 
     "prepublish:npm": "yarn run build",
-    "publish:npm": "yarn publish --access public",
-
+    "publish:npm": "npm publish --access public",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --clear --ignore-watch node_modules --no-notify src/testing.ts",
     "test": "jest"
   },
@@ -53,6 +52,7 @@
     "ts-jest": "^26.3.0",
     "ts-node-dev": "^1.0.0-pre.61",
     "tsconfig-paths": "^3.9.0",
+    "tscpaths": "^0.0.9",
     "typescript": "^4.0.2"
   },
   "dependencies": {}
