--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "postbuild": "tsc -p tsconfig.json && tscpaths -p tsconfig.json -s src",
     "prepublish:npm": "yarn run build",
-    "publish:npm": "npm publish --access public",
+    "publish:npm": "yarn publish --access public",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --clear --ignore-watch node_modules --no-notify src/testing.ts",
     "test": "jest"
   },
