chore: remove babel

--- a/package.json
+++ b/package.json
@@ -20,23 +20,16 @@
   "scripts": {
     "delete-build": "rimraf dist",
     "prebuild": "yarn delete-build",
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
-    "postbuild": "tsc -p tsconfig.json && tscpaths -p tsconfig.json -s src",
+    "build": "tsc -p tsconfig.json && tscpaths -p tsconfig.json -s src -o dist",
     "prepublish:npm": "yarn run build",
     "publish:npm": "yarn publish --access public",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --clear --ignore-watch node_modules --no-notify src/testing.ts",
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.5",
-    "@babel/core": "^7.11.5",
-    "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.12",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
-    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
