--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
 	"rules": {
 		"semi": [
 			"error",
-			"never"
+			"always"
 		],
 		"quotes": [
 			"warn",
@@ -49,6 +49,10 @@
 		"template-curly-spacing": [
 			"error",
 			"never"
+		],
+		"comma-dangle": [
+			"error",
+			"only-multiline"
 		]
 	}
 }
